# airmark

./: AGENTS.md  ARCHITECTURE.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: pages.yml
docs/: index.html  llms.txt
docs/assets/: site.css  site.js
docs/dev/: settings-pages.excalidraw
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  macos_shim.rs  main.rs  state.rs
src/components/: ChatWindow.tsx  ChoiceList.tsx  DialogBox.tsx  TerminalLogs.tsx  ToolConfirmSheet.tsx  TriggerButton.tsx
src/hooks/: useAssistant.ts
